--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     //데이터 저장
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
-
+    implementation 'mysql:mysql-connector-java:8.0.32'
     //채팅관련
 
     //시큐리티
