#6- swagger ui 추가
api 문서화를 위해 의존성을 추가하고 빈으로 등록했다

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,6 @@ spring:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100
   sql.init.mode: always
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
