#12-[jwt]-환경 설정
jwt와 redis의 의존성과 환경설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -28,15 +28,20 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    //데이터 저장
+    // mysql &&  redis
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.h2database:h2'
     implementation 'mysql:mysql-connector-java:8.0.32'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     //채팅관련
 
-    //시큐리티
+    //시큐리티  && jwt
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
 
     //생산성
     compileOnly 'org.projectlombok:lombok'
@@ -50,9 +55,6 @@ dependencies {
     //querydsl 설정
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
-
-
-
 
 }
 
