--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
             scope: email,profile
           naver:
             client-id: ${NAVER_CLIENT_ID}
-            client-secret: ${NAVER_SECRET}
+            client-secret: ${NAVER_CLIENT_SECRET}
             redirect-uri: "http://localhost:8080/login/oauth2/code/naver"
             authorization-grant-type: authorization_code
             scope : name, email, profile_image
