--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,6 +52,13 @@ spring:
             token_uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user_name_attribute: id
+
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+      enabled: true
+
   redis:
     host: localhost
     port: 6379
@@ -69,6 +76,15 @@ server:
   port: 8080
 
 
-
-
+cloud:
+  aws:
+    s3:
+      bucket: 
+    credentials:
+      access-key:
+      secret-key:
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
 
