--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,10 +79,10 @@ server:
 cloud:
   aws:
     s3:
-      bucket: 
+      bucket: ${BUCKET_NAME}
     credentials:
-      access-key:
-      secret-key:
+      access-key: ${S3_ACCESS_KEY}
+      secret-key: ${S3_SECRET_KEY}
     region:
       static: ap-northeast-2
     stack:
